Fix Telegram API base handling and backend health info

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
-# Copy this file to .env.local (or .env) and update the backend URL below.
-# The value must include the protocol (http or https) and should NOT end with a trailing slash.
-REACT_APP_BACKEND_URL=https://your-ngrok-subdomain.ngrok-free.dev
+# Copy this file to .env.local (or .env) and update the API base URL below.
+# The value must include the protocol (http or https) and should include the `/api` suffix.
+REACT_APP_API_URL=https://your-ngrok-subdomain.ngrok-free.dev/api
